<resources>
    <string name="app_name">EigoNews</string>
    <string name="default_news_content">Something went wrong, please swipe down to refresh.</string>
    <string name="default_news_image_description">News Image</string>
    <string name="defaultSourcePlaceHolder">Source: Anonymous</string>
    <string name="defaultDescriptionPlaceHolder">Please Refresh . . .</string>
    <string name="defaultGoogeNewsSourceText">Powered By Google News.</string>
    <string name="loading_news_caption">Fetching top headlines for you.</string>
</resources>
